syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.Notification_Service.grpc";
option java_outer_classname = "NotificationProto";

service NotificationService {
  rpc SendNotification (NotificationRequest) returns (NotificationResponse);
}

message NotificationRequest {
  int64 orderId = 1;
  int64 customerId = 2;
  double amount = 3;
}

message NotificationResponse {
  string message = 1;
}